crates/courier-ftp-proto-ftp/tests/snapshots/listing__listing_fixtures_snapshot@mvs__dataset-dsorgs.txt.snap
---
source: crates/courier-ftp-proto-ftp/tests/listing.rs
expression: snapshot(&parsed)
input_file: crates/courier-ftp-proto-ftp/tests/listings/mvs/dataset-dsorgs.txt
---
format: mvs-dataset
used_fallback_encoding: false
skipped_count: 0
entries:
  - name: ALICE.LOADLIB
    kind: dir
    size: ~
    modified: "2024-02-01T00:00:00Z (Day)"
    permissions: ~
    owner: ~
    group: ~
    hidden: false
  - name: ALICE.LOG
    kind: file
    size: ~
    modified: "2024-02-02T00:00:00Z (Day)"
    permissions: ~
    owner: ~
    group: ~
    hidden: false
  - name: ALICE.DIRECT
    kind: file
    size: ~
    modified: "2024-02-03T00:00:00Z (Day)"
    permissions: ~
    owner: ~
    group: ~
    hidden: false
  - name: ALICE.VSAM.KSDS
    kind: file
    size: ~
    modified: "2024-02-04T00:00:00Z (Day)"
    permissions: ~
    owner: ~
    group: ~
    hidden: false
  - name: ALICE.NEVER.USED
    kind: file
    size: ~
    modified: ~
    permissions: ~
    owner: ~
    group: ~
    hidden: false
skipped: []
