crates/courier-ftp-proto-ftp/tests/snapshots/listing__listing_fixtures_snapshot@mvs__dataset-offset.txt.snap
---
source: crates/courier-ftp-proto-ftp/tests/listing.rs
expression: snapshot(&parsed)
input_file: crates/courier-ftp-proto-ftp/tests/listings/mvs/dataset-offset.txt
---
format: mvs-dataset
used_fallback_encoding: false
skipped_count: 0
entries:
  - name: ALICE.SOURCE
    kind: dir
    size: ~
    modified: "2024-01-31T00:00:00Z (Day)"
    permissions: ~
    owner: ~
    group: ~
    hidden: false
  - name: ALICE.NEWYEAR
    kind: file
    size: ~
    modified: "2024-01-01T00:00:00Z (Day)"
    permissions: ~
    owner: ~
    group: ~
    hidden: false
skipped: []
