crates/courier-ftp-proto-ftp/tests/snapshots/listing__listing_fixtures_snapshot@mvs__member-offset.txt.snap
---
source: crates/courier-ftp-proto-ftp/tests/listing.rs
expression: snapshot(&parsed)
input_file: crates/courier-ftp-proto-ftp/tests/listings/mvs/member-offset.txt
---
format: mvs-member
used_fallback_encoding: false
skipped_count: 0
entries:
  - name: MEMBER1
    kind: file
    size: ~
    modified: "2024-01-31T17:00:00Z (Minute)"
    permissions: ~
    owner: ~
    group: ~
    hidden: false
skipped: []
