crates/courier-ftp-proto-ftp/tests/snapshots/listing__listing_fixtures_snapshot@mvs__member-stats.txt.snap
---
source: crates/courier-ftp-proto-ftp/tests/listing.rs
expression: snapshot(&parsed)
input_file: crates/courier-ftp-proto-ftp/tests/listings/mvs/member-stats.txt
---
format: mvs-member
used_fallback_encoding: false
skipped_count: 0
entries:
  - name: COBPGM1
    kind: file
    size: ~
    modified: "2023-11-02T09:15:00Z (Minute)"
    permissions: ~
    owner: ~
    group: ~
    hidden: false
  - name: COBPGM2
    kind: file
    size: ~
    modified: "2024-02-29T23:59:30Z (Second)"
    permissions: ~
    owner: ~
    group: ~
    hidden: false
  - name: "JCL#1"
    kind: file
    size: ~
    modified: "2024-01-01T00:00:00Z (Minute)"
    permissions: ~
    owner: ~
    group: ~
    hidden: false
  - name: $TEMP
    kind: file
    size: ~
    modified: "2024-01-31T12:00:00Z (Minute)"
    permissions: ~
    owner: ~
    group: ~
    hidden: false
skipped: []
